--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postbuild": "echo 'Skipping automatic database setup for Vercel deployment'"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.9.1",
     "drizzle-orm": "^0.41.0",
